# irio

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  key.json
.github/workflows/: docker-image.yml  google-template.yaml  google-testing.yaml  google.yaml  rust.yaml
configuration_scripts/: Dockerfile  add_admin.py  add_endpoint.py  configuration_endpoint.py  configuration_types.py  requirements.txt
deployment/: build_docker_images.sh  create_artifacts_repo.sh  create_cluster.sh  create_python_postgres_image.sh  deploy_configuration_endpoint.sh  python-postgres-pod.yaml  run_all.sh
deployment/configuration-service/: deployment.yaml
deployment/healthcheck/: deployment.yaml  hpa.yaml
deployment/kubegres/: custom-my-postgres-config.yaml
deployment/kubernetes-resources/: kustomization.yaml  python-postgres-pod.yaml
deployment/kubernetes-test-resources/: kustomization.yaml
deployment/notification/: deployment.yaml  hpa.yaml
e2e_tests/: test_basic.py
local_docker/: .env  docker-compose.yml  kill_container.sh  run_postgres_container.sh  setup_credentials.sh
notification_dockerfile/: Dockerfile  create_notification_docker_image.sh
python_postgres_setup/: Dockerfile  create_tables.py  print_tables.py  schemas.py
python_postgress_setup/: create_tables.py  print_tables.py  schemas.py
service_test/: Dockerfile  service.py
services/healthcheck/: Cargo.toml  Dockerfile
services/healthcheck/.sqlx/: query-0265571e72d4abf4fa61b3480b6d39c40a29aec89f45a8d5384682ae83915d51.json  query-1d613ffe45329ba55d79db04605d776633a9784365a9b1beab65ca370fab5651.json  query-2623a61502a67126b02c41ff950c27e3dd3042c5c71562d3883af58612148bcc.json  query-3c0333381f513c5787894946cf163e1d0789306e90a9dfa73a833ad8ddba5ca6.json  query-51f585fb19c2b62dd39fc8564c8e5025634f83e704d9c43699ed5a4886f2b58a.json  query-93677900a32bfbc179f2fa8640761fbb886f5437d4a3c4ef530bf62b9583b71b.json  query-b70dc7dab8a2d30d12340acd70cf55849f22350ef09a6e361905903e02f748eb.json  query-bf4ed04d6736e3635015616a00a2e844c0d8aa1ca3181c69dc0bb4ce1233688c.json  query-e8329984b5cf119cb88d6f04160b6927457bbd1286e5538c1549f02eeb87b320.json  query-f42997124e988b921029060bd3abfbb7837ffcb87ec7814922556da3fe0c05eb.json
services/healthcheck/src/: main.rs
services/notification/: Cargo.toml  Dockerfile  build_docker_image.sh
services/notification/src/: db.rs  db_executor.rs  domain.rs  lib.rs  main.rs  notification_sender.rs  notification_service.rs  utils.rs
terraform/: irio-final-project-4f3f8f86d140.json  main.tf
test/: notification_sends_notifications.py  run_notification_test.sh
(+12 files in other folders)
