[package]
name = "healthcheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "uuid"] }
reqwest = "0.11"
dotenv = "0.15"
log = "0.4"
env_logger = "0.9"
uuid = { version = "1.7.0" , features = ["v4","fast-rng", "macro-diagnostics"]}
chrono = { version = "0.4"}
