[package]
name = "notification"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "notification"
path = "src/main.rs"

[dependencies]
scylla = "0.3.1"
tokio = {version = "1.22", features = ["full"] }
uuid = { version = "1.2" }
async-trait = "0.1"
anyhow = "1.0.33"
