[package]
name = "notification"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "notification"
path = "src/main.rs"

[dependencies]
scylla = "0.3.1"
tokio = {version = "1.22", features = ["full"] }
uuid = { version = "1.2", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
async-trait = "0.1"
anyhow = "1.0.33"
chrono = { version = "0.4", default-features = false }
log = "0.4"
