[package]
name = "notification"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "notification"
path = "src/main.rs"

[dependencies]
tokio = {version = "1.22", features = ["full"] }
uuid = { version = "1.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
async-trait = "0.1"
anyhow = "1.0.33"
chrono = { version = "0.4", default-features = false }
log = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
teloxide = "0.12.2"
futures = "0.3.30"
env_logger = "0.10.2"
lettre = { version = "0.11.3", features = ["tokio1", "tokio1-native-tls"] }